--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,70 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* Rose Gold Palette */
+  
+  --rose-gold-bg-light: #fbf9f5; /* Pale Pink */
+  --rose-gold-pale-pink: #FBEAEB; /* Pale Pink */
+  --rose-gold-fg-light: #7C525A; /* Dark Desaturated Rose */
+  --rose-gold-fg-mid: #A6471B; /* Rusty Pink */
+  --rose-gold-bg-dark: #4A3B3C;  /* Dark Warm Rosy Brown */
+  --rose-gold-fg-dark: #E0B8BF;  /* Light Soft Rose */
+  --rose-gold-bg-mid: #A6471B;  /* Rusty Pink */
+  --golden: #D4AF37; /* Yellow Gold */
+
+  /* Apply Rose Gold as default theme */
+  --background: var(--rose-gold-bg-light);
+  --foreground: var(--rose-gold-fg-light);
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-figtree);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-sans);
+}
+
+.text-dark {
+  color:  var(--rose-gold-bg-dark);
+}
+.text-mid {
+  color:  var(--rose-gold-bg-mid);
+}
+.text-black {
+  color:  var(--color-black);
+}
+.text-gold {
+  color:  var(--golden);
+}
+
+.text-light {
+  color:  var(--rose-gold-bg-light);
+}
+.text-white {
+  color: var(--color-white);
+}
+
+.bg-dark {
+  background-color: var(--rose-gold-bg-dark)
+}
+.bg-black {
+  background-color: var(--color-black);
+}
+
+.video-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-height: 800px;
+  object-fit: cover;
+  z-index: -1;
 }
